css 후손까지 완료

--- a/1_HTML5/12_HTML연습문제3.html
+++ b/1_HTML5/12_HTML연습문제3.html
@@ -20,12 +20,12 @@
 
         <tr>
           <th>비밀번호</th>
-          <td colspan="2"><input type="text" size="30" placeholder="영문, 숫자, 특수문자 포함 8자 이상"></td>
+          <td colspan="2"><input type="password" size="30" placeholder="영문, 숫자, 특수문자 포함 8자 이상"></td>
         </tr>
 
         <tr>
           <th>비밀번호 확인</th>
-          <td colspan="2"><input type="text" size="30"></td>
+          <td colspan="2"><input type="password" size="30"></td>
         </tr>
 
         <tr>
@@ -45,7 +45,7 @@
 
     <fieldset>
       <legend>추가 정보</legend>
-      프로필 사진&nbsp;<button type="file">파일 선택</button><br><br>
+      프로필 사진&nbsp;<input type="file"></input><br><br>
       성별 :
       <label><input type="radio" name="gender">남자</input></label>
       <label><input type="radio" name="gender">여자</input></label><br><br>
