--- a/2_CSS/07_레이아웃스타일1.html
+++ b/2_CSS/07_레이아웃스타일1.html
@@ -44,11 +44,11 @@
   <span class="area5 block">5번 영역</span>
 
   <h3>inline-block 확인하기</h3>
-  <span class="area1 block inline">1번 영역</span>
-  <span class="area2 block inline">2번 영역</span>
-  <span class="area3 block inline">3번 영역</span>
-  <span class="area4 block inline">4번 영역</span>
-  <span class="area5 block inline">5번 영역</span>
+  <span class="area1 block inline-block">1번 영역</span>
+  <span class="area2 block inline-block">2번 영역</span>
+  <span class="area3 block inline-block">3번 영역</span>
+  <span class="area4 block inline-block">4번 영역</span>
+  <span class="area5 block inline-block">5번 영역</span>
 
   <hr>
 
