--- a/2_CSS/넷플릭스_해리포터.html
+++ b/2_CSS/넷플릭스_해리포터.html
@@ -4,52 +4,87 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Netflix</title>
+  <title>넷플릭스</title>
 
   <link rel="stylesheet" href="css/harrypoter.css">
-
 </head>
 
-<!--
-/* 크롬, 사파리, 엣지 등 브라우저 전용 속성 중 하나
-글씨 테두리 색상과 두께를 한번에 지정 */
-/* webkit-text-stroke: 5px white; */
-/* color : black */
-/* img left에 마이너스 */ -->
-
 <body>
-  <h3 style="color: white;" id="size">&nbsp;&nbsp;&nbsp;&nbsp;오늘 한국의 TOP 10 콘텐츠</h3>
+
+  <h2>대한민국 TOP10</h2>
 
   <div class="poster-box">
     <p>1</p>
     <div>
-      <img src="/images/해리포터.webp" height="225x">
+      <img src="/images/해리포터.webp">
     </div>
   </div>
 
-  <!-- </div>
-
-
-
-
-  <h3 style="color: white;" id="size">&nbsp;&nbsp;&nbsp;&nbsp;지금 뜨는 콘텐츠</h3>
-
-  <div class="area1 inline" id="box-sizing">
-    <img src="/images/해리포터.webp" height="225x">
+  <div class="poster-box">
+    <p>2</p>
+    <div>
+      <img src="/images/해리포터2.webp">
+    </div>
   </div>
 
-  <div class="area1 inline" id="box-sizing"></div>
-    <img src="/images/해리포터2.webp" height="225x">
+  <div class="poster-box">
+    <p>3</p>
+    <div>
+      <img src="/images/해리포터.webp">
+    </div>
   </div>
-  <div class="area1 inline" id="box-sizing"></div>
-    <img src="/images/해리포터.webp" height="225x">
+
+  <div class="poster-box">
+    <p>4</p>
+    <div>
+      <img src="/images/해리포터2.webp">
+    </div>
   </div>
-  <div class="area1 inline" id="box-sizing"></div>
-    <img src="/images/해리포터2.webp" height="225x">
+
+  <div class="poster-box">
+    <p>5</p>
+    <div>
+      <img src="/images/해리포터.webp">
+    </div>
   </div>
-  <div class="area1 inline" id="box-sizing"></div>
-    <img src="/images/해리포터.webp" height="225x">
-  </div> -->
+
+
+
+
+
+  <br><br><br>
+  <h2>지금 뜨는 콘텐츠</h2>
+
+  <div class="contents-box">
+    <div>
+      <img src="/images/해리포터.webp">
+    </div>
+  </div>
+
+  <div class="contents-box">
+    <div>
+      <img src="/images/해리포터2.webp">
+    </div>
+  </div>
+
+  <div class="contents-box">
+    <div>
+      <img src="/images/해리포터.webp">
+    </div>
+  </div>
+
+  <div class="contents-box">
+    <div>
+      <img src="/images/해리포터2.webp">
+    </div>
+  </div>
+
+  <div class="contents-box">
+    <div>
+      <img src="/images/해리포터.webp">
+    </div>
+  </div>
+
 
 </body>
 
