flex 예제문제 완료

--- a/2_CSS/10_flexbox.html
+++ b/2_CSS/10_flexbox.html
@@ -207,21 +207,30 @@
       <div class="head2"></div>
     </div>
     <div class="body-5">
-      <div class="sky">
+      <div class="one">
         <div></div>
         <div></div>
         <div></div>
       </div>
-      <div class="pink"></div>
-      <div class="orange">
-        <div class="small"></div>
-        <div class="green">
-          <div class="small2"></div>
-          <div></div>
+
+      <div class="two"></div>
+
+      <div class="three">
+        <div class="top"></div>
+        <div class="bottom">
+          <div class="left">
+            <div></div>
+            <div></div>
+          </div>
+          <div class="right"></div>
         </div>
-        <div class="red"></div>
       </div>
-      <div class="pink3"></div>
+
+      <div class="four">
+        <div class="pink1"></div>
+        <div class="pink2"></div>
+        <div class="pink1"></div>
+      </div>
     </div>
   </div>
 
