유튜브 화면 구현 중

--- a/2_CSS/13_시맨틱태그.html
+++ b/2_CSS/13_시맨틱태그.html
@@ -149,7 +149,7 @@
           <!-- 회원가입 / ID/PW 찾기 영역 -->
            <section id="signup-find-area">
             <a href="#">회원가입</a>
-            <spam> | </spam>
+            <span> | </span>
             <a href="#">ID/PW 찾기</a>
            </section>
         </section>
