--- a/Test/test2/강지현.html
+++ b/Test/test2/강지현.html
@@ -18,47 +18,47 @@
 
     <tr>
       <th>글자크기 : </th>
-      <td><input type="text"style="width: 100px;"> px</td>
+      <td><input type="text"style="width: 100px;" id="fontsize"> px</td>
       <th>굵기 : </th>
-      <td>보통<input type="radio">
-          굵게<input type="radio"></td>
+      <td>보통<input type="radio" name="weight" value="normal" required>
+          굵게<input type="radio" name="weight" value="bold"></td>
     </tr>
 
     <tr>
       <th>글자색 : </th>
-      <td><input type="text"></td>
+      <td><input type="text"  style="width: 200px;"  id="fontcolor"></td>
       <th>배경색 : </th>
-      <td><input type="text"></td>
+      <td><input type="text"  style="width: 200px;" id="back"></td>
     </tr>
 
     <tr>
       <th>가로정렬 : </th>
-      <td colspan="5">왼쪽<input type="radio">
-      가운데<input type="radio">
-      오른쪽<input type="radio"></td>
+      <td colspan="5">왼쪽<input type="radio" name="col" value="flex-start" required>
+        가운데<input type="radio" name="col" value="center">
+        오른쪽<input type="radio" name="col" value="flex-end"></td>
     </tr>
 
     <tr>
       <th>세로정렬 : </th>
-      <td colspan="5">위<input type="radio">
-      가운데<input type="radio">
-      아래<input type="radio"></td>
+      <td colspan="5">위<input type="radio" name="row" value="flex-start" required>
+        가운데<input type="radio" name="row" value="center">
+        아래<input type="radio" name="row" value="flex-end"></td>
     </tr>
 
     <tr>
       <th>출력 문자열 : </th>
-      <td colspan="5"><input type=text style="width: 500px;"></td>
+      <td colspan="5"><input type=text style="width: 500px;" id="horse"></td>
     </tr>
 
     <tr>
       <td colspan="6" style="text-align: center;"><button id="setBtn">적용하기</button></td>
     </tr>
   </table>
+</form>
 
   <div id="container" style="border: 1px solid black; display: none;">
   </div>
 
-  </form>
-  
+  <script src="강지현.js"></script>
 </body>
 </html>
